# relaxed_ik_coppeliasim

./: .gitignore  README.md  childScriptExample.lua  example.lua
simExtRelaxedIK/: CMakeLists.txt  callbacks.xml  config.h  plugin.cpp  plugin.h
